# Combinatorial-Optimization

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: graph.cpp  graph.hpp
src/: AlternatingTree.cpp  AlternatingTree.h  CardinalityMatchingAlgorithm.h  Edge.cpp  Edge.h  Matching.cpp  Matching.h  MatchingFactory.cpp  MatchingFactory.h  OddCircuit.cpp  OddCircuit.h  ShrinkableGraph.cpp  ShrinkableGraph.h  UnevenCircuit.cpp  UnevenCircuit.h  UnionFind.cpp  UnionFind.h  task1.cpp  typedefs.h  utils.h
src/algorithms/: CardinalityMatchingAlgorithm.cpp  CardinalityMatchingAlgorithm.h  MatchingUnshrinkAlgorithm.cpp  MatchingUnshrinkAlgorithm.h
src/dimacs/: Reader.cpp  Reader.h  Writer.cpp  Writer.h
tests/: AlternatingTree.cpp  CardinalityMatchingAlgorithm.cpp  Edge.cpp  Matching.cpp  ShrinkableGraph.cpp  UnevenCircuit.cpp  UnionFind.cpp  fixtures.h  tests.cpp  utils.cpp
tests/algorithms/: CardinalityMatchingAlgorithm.cpp
tests/dimacs/: Reader.cpp
